--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@
     <div class="row">
         <div class="twelve columns">
             <p>
-                <a href="resume.pdf" class="button">View PDF</a>
+                <a href="Resume%20-%20Clinton%20Andrews.pdf" class="button">View PDF</a>
             </p>
             <h5>Recent Projects</h5>
         </div>
