--- a/index.html
+++ b/index.html
@@ -1,40 +1,6 @@
-<!doctype html>
-<html class="no-js" lang="">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <!-- Place favicon.ico in the root directory -->
-
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-</head>
-<body>
-<!--[if lt IE 8]>
-<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-<![endif]-->
-
-<header>
-    <input type="checkbox" id="navbar-checkbox" class="navbar-checkbox">
-    <nav class="menu">
-        <a href="#" id="logo">Clinton Andrews</a>
-        <ul>
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-
-        <label for="navbar-checkbox" class="navbar-handle"></label>
-    </nav>
-</header>
+---
+layout: default
+---
 
 <section id="content" class="container">
     <div id="main-banner">
@@ -46,15 +12,12 @@
 
 <div class="container">
     <section id="github-feed">
-        <h5>Recent Activity <a href="http://github.com/candrews800" class="button u-pull-right">Github Profile</a></h5>
+        <h5>Recent Activity <a href="http://github.com/candrews800" class="button u-pull-right"><i class="fa fa-github"></i> Github Profile</a></h5>
         <hr />
         <ul>
         </ul>
     </section>
 </div>
-
-</body>
-</html>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="js/vendor/moment.min.js"></script>
