add blog styling

--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@ layout: default
     <div id="main-banner">
         <img src="img/avatar.jpg" />
         <h1>Hello.</h1>
-        <p>Welcome to my website. I am a web developer interested in both front-end and back-end technology. My experience is primarily using <a href="http://php.net/">PHP</a> and the framework <a href="http://laravel.com/">Laravel</a>. I've also worked with <a href="https://wordpress.org/">WordPress</a> and created my own <a href="https://packagist.org/packages/candrews/zipcode">Composer project</a> that integrates with an <a href="http://zzipcode.com/">API I built</a>. Feel free to browse my <a href="https://github.com/candrews800">Github profile</a> or check out my <a href="projects.html">projects</a> to see what else I'm up to.</p>
+        <div class="row">
+            <div class="offset-by-two eight columns">
+                <p>Welcome to my website. I am a web developer interested in both front-end and back-end technology. My experience is primarily using <a href="http://php.net/">PHP</a> and the framework <a href="http://laravel.com/">Laravel</a>. I've also worked with <a href="https://wordpress.org/">WordPress</a> and created my own <a href="https://packagist.org/packages/candrews/zipcode">Composer project</a> that integrates with an <a href="http://zzipcode.com/">API I built</a>. Feel free to browse my <a href="https://github.com/candrews800">Github profile</a> or check out my <a href="projects.html">projects</a> to see what else I'm up to.</p>
+            </div>
+        </div>
     </div>
 </section>
 
 <div class="container">
     <section id="github-feed">
-        <h5>Recent Activity <a href="http://github.com/candrews800" class="button u-pull-right"><i class="fa fa-github"></i> Github Profile</a></h5>
+        <div class="u-cf github-feed-header">
+            <h5 class="u-pull-left">Recent Activity</h5>
+            <a href="http://github.com/candrews800" class="github-link button u-pull-right"><i class="fa fa-github"></i> Github Profile</a>
+        </div>
         <hr />
         <ul>
         </ul>
