--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@ layout: default
     <div class="row">
         <div class="twelve columns">
             <p>
-                <a href="Resume%20-%20Clinton%20Andrews.pdf" class="button">View PDF</a>
+                <a href="Resume%20-%20Clinton%20Andrews.pdf" class="button button-primary">View PDF</a>
             </p>
             <h5>Recent Projects</h5>
         </div>
