--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@ layout: default
 
 <section id="content" class="container">
     <div id="contact" class="row">
-        <div class="six offset-by-three columns">
+        <div class="ten offset-by-one columns">
         <h1>Let's talk.</h1>
         <p>Need to get in touch with me? The best way is to email me at <a href="mailto:candrews800@gmail.com">candrews800@gmail.com</a>. I check my mail throughout the day and would love to hear from you.</p>
         <p><a href="mailto:candrews800@gmail.com" class="button"><i class="fa fa-envelope"></i> candrews800@gmail.com</a></p>
