--- a/projects.html
+++ b/projects.html
@@ -6,17 +6,15 @@ layout: default
     <div id="project-list">
         <h5>Active Projects</h5>
         <article class="project row">
-            <div class="two columns">
+            <div class="four columns">
                 <p>
                     <a href="http://discovercooks.com/">DiscoverCooks.com</a>
                 </p>
-            </div>
-            <div class="three columns">
                 <p>
                     PHP, MySQL, Laravel, JQuery
                 </p>
             </div>
-            <div class="six columns">
+            <div class="eight columns">
                 <p>
                     DiscoverCooks is a recipe sharing site for amateur chefs. Users are able to create, rate, save and review recipes. Users are able to earn a portion of the total revenue of the site based on their recipes and reviews they create. In addition, the site's features include a forum and blog system as well as users stats such as their account balance and how well their recipes and reviews are performing.
                 </p>
@@ -24,17 +22,15 @@ layout: default
             </div>
         </article>
         <article class="project row">
-            <div class="two columns">
+            <div class="four columns">
                 <p>
                     <a href="http://zzipcode.com/">Zzipcode.com</a>
                 </p>
-            </div>
-            <div class="three columns">
                 <p>
                     PHP, MySQL, Laravel, Redis
                 </p>
             </div>
-            <div class="seven columns">
+            <div class="eight columns">
                 <p>
                     Zzipcode.com is a free zipcode API which provides users with detailed information about zipcodes within the US. It provides various API endpoints allowing users to get detailed zipcode information, find nearby zipcodes, search by city as well as calculate the distance between two zipcodes.
                 </p>
@@ -42,17 +38,15 @@ layout: default
             </div>
         </article>
         <article class="project row">
-            <div class="two columns">
+            <div class="four columns">
                 <p>
                     <a href="https://github.com/candrews800/zipcode">Zzipcode.com PHP Library</a>
                 </p>
-            </div>
-            <div class="three columns">
                 <p>
                     PHP, Composer
                 </p>
             </div>
-            <div class="seven columns">
+            <div class="eight columns">
                 <p>
                     This PHP library integrates with the Zzipcode API. It can be quickly installed using Composer and with an API key provided by <a href="http://zzipcode.com">zzipcode.com</a>.
                 </p>
@@ -60,17 +54,15 @@ layout: default
             </div>
         </article>
         <article class="project row">
-            <div class="two columns">
+            <div class="four columns">
                 <p>
                     <a href="http://ratearescue.com">RateARescue.com</a>
                 </p>
-            </div>
-            <div class="three columns">
                 <p>
                     PHP, MySQL, Laravel, JQuery
                 </p>
             </div>
-            <div class="seven columns">
+            <div class="eight columns">
                 <p>
                     Rate A Rescue works with the <a href="https://www.petfinder.com/developers/api-docs">Petfinder API</a> to allow users to find nearby rescue animals and rate them in a variety of ways.
                 </p>
@@ -79,17 +71,15 @@ layout: default
         </article>
 
         <article class="project row">
-            <div class="two columns">
+            <div class="four columns">
                 <p>
                     <a href="http://clintonandrews.com">Clinton Andrews Portfolio</a>
                 </p>
-            </div>
-            <div class="three columns">
                 <p>
                     HTML, CSS, JQuery
                 </p>
             </div>
-            <div class="seven columns">
+            <div class="eight columns">
                 <p>
                     You're looking at it!
                 </p>
@@ -101,17 +91,15 @@ layout: default
 
         <h5>Past Projects</h5>
         <article class="project row">
-            <div class="two columns">
+            <div class="four columns">
                 <p>
                     <a href="http://sunshineplumbingofsouthflorida.com">Sunshine Plumbing of South Florida</a>
                 </p>
-            </div>
-            <div class="three columns">
                 <p>
                     PHP, MyMySQLSql, Wordpress
                 </p>
             </div>
-            <div class="seven columns">
+            <div class="eight columns">
                 <p>
                     This was a site I made for a local business of that my family is a part of. The company now maintains the site, however I created the design and theme. While I am no logo creator, I did create their present logo which can now be found on their trucks.
                 </p>
@@ -119,17 +107,15 @@ layout: default
             </div>
         </article>
         <article class="project row">
-            <div class="two columns">
+            <div class="four columns">
                 <p>
                     <a href="http://taskchomp.com">TaskChomp.com</a>
                 </p>
-            </div>
-            <div class="three columns">
                 <p>
                     PHP, MySQL
                 </p>
             </div>
-            <div class="seven columns">
+            <div class="eight columns">
                 <p>
                     To Do List App. This was one of the first project I ever worked on. The site is all custom PHP with no framework, and all MySQL queries are written by hand.
                 </p>
@@ -138,17 +124,15 @@ layout: default
         </article>
 
         <article class="project row">
-            <div class="two columns">
+            <div class="four columns">
                 <p>
                     <a href="http://github.com/candrews800/UFBowling">UFBowling.com</a>
                 </p>
-            </div>
-            <div class="three columns">
                 <p>
                     PHP, MySQL
                 </p>
             </div>
-            <div class="seven columns">
+            <div class="eight columns">
                 <p>
                     Custom CMS built with no framework. Another first project of mine which taught me a lot. The current version of UF Bowling (which may be accessible or not) is not of my creation. UF Bowling was a sport club that I was a part of while at the University of Florida.
                 </p>
@@ -157,17 +141,15 @@ layout: default
         </article>
 
         <article class="project row">
-            <div class="two columns">
+            <div class="four columns">
                 <p>
                     <a href="https://github.com/candrews800/Pac-Man">Pac-Man</a>
                 </p>
-            </div>
-            <div class="three columns">
                 <p>
                     C++, SDL
                 </p>
             </div>
-            <div class="seven columns">
+            <div class="eight columns">
                 <p>
                     Remake of Pac Man.
                 </p>
@@ -176,17 +158,15 @@ layout: default
         </article>
 
         <article class="project row">
-            <div class="two columns">
+            <div class="four columns">
                 <p>
                     <a href="https://github.com/candrews800/Tetris">Brick Layer</a>
                 </p>
-            </div>
-            <div class="three columns">
                 <p>
                     C++, SDL
                 </p>
             </div>
-            <div class="seven columns">
+            <div class="eight columns">
                 <p>
                     Remake of Tetris
                 </p>
@@ -195,17 +175,15 @@ layout: default
         </article>
 
         <article class="project row">
-            <div class="two columns">
+            <div class="four columns">
                 <p>
                     <a href="https://github.com/candrews800/SpaceInvaders">Tribal Invaders</a>
                 </p>
-            </div>
-            <div class="three columns">
                 <p>
                     C++, SDL
                 </p>
             </div>
-            <div class="seven columns">
+            <div class="eight columns">
                 <p>
                     Remake of Space Invaders
                 </p>
@@ -214,17 +192,15 @@ layout: default
         </article>
 
         <article class="project row">
-            <div class="two columns">
+            <div class="four columns">
                 <p>
                     <a href="https://github.com/candrews800/Pong">Pong</a>
                 </p>
-            </div>
-            <div class="three columns">
                 <p>
                     C++, SDL
                 </p>
             </div>
-            <div class="seven columns">
+            <div class="eight columns">
                 <p>
                     Remake of Pong -- First foray into game development.
                 </p>
