--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@ layout: default
             </p>
             <h5>Recent Projects</h5>
         </div>
-        <div class="eleven offset-by-one columns experience-item">
+        <div class="twelve columns experience-item">
             <p class="resume-exp-header"><strong>DiscoverCooks.com</strong> <strong class="u-pull-right">Oct 2014 - <em>Present</em></strong><br />
                 <em>Recipe Sharing Site with Forums, Blogging, Reviews, and Admin Interface</em> <br />
                 Founder and Sole Developer/Designer
@@ -22,7 +22,7 @@ layout: default
                 <li>Developed full admin interface allowing for front page customization and moderation of users, forums, recipes, reviews, blog and comments</li>
             </ul>
         </div>
-        <div class="eleven offset-by-one columns experience-item">
+        <div class="twelve columns experience-item">
             <p class="resume-exp-header"><strong>Zzipcode.com</strong> <strong class="u-pull-right">April 2015 - <em>Present</em></strong><br />
                 <em>Zipcode REST API and PHP library</em> <br />
                 Creator and Sole Developer
@@ -37,14 +37,14 @@ layout: default
         <div class="twelve columns">
             <h5>Skills</h5>
         </div>
-        <div class="eleven offset-by-one columns experience-item">
+        <div class="twelve columns experience-item">
             <p>PHP, MySQL, Laravel, HTML, CSS, Javascript, JQuery, SASS, Git, C++, WordPress, Composer, Ubuntu, Redis</p>
         </div>
 
         <div class="twelve columns" style="margin-top: 1em;">
             <h5>Work Experience</h5>
         </div>
-        <div class="eleven offset-by-one columns experience-item">
+        <div class="twelve columns experience-item">
             <p class="resume-exp-header"><strong>Community Bank of Broward, Cooper City, FL</strong> <strong class="u-pull-right">April 2007 - December 2014 </strong><br />
                 Assistant Systems Administrator
             </p>
@@ -56,7 +56,7 @@ layout: default
                 <li>Create custom reports using core processor database for a variety of different projects using Crystal Reports</li>
             </ul>
         </div>
-        <div class="eleven offset-by-one columns experience-item">
+        <div class="twelve columns experience-item">
             <p class="resume-exp-header"><strong>Metric Engineering, Gainesville, FL</strong> <strong class="u-pull-right">February 2013 - December 2013 </strong><br />
                 Signal Operator at City of Gainesville Traffic Management Center
             </p>
@@ -70,7 +70,7 @@ layout: default
         <div class="twelve columns">
             <h5>Education</h5>
         </div>
-        <div class="eleven offset-by-one columns experience-item">
+        <div class="twelve columns experience-item">
             <p class="resume-exp-header"><strong>Bachelor of Science in Computer Science</strong> - <em>In Progress</em> <strong class="u-pull-right">August 2015 - <em>Present</em></strong><br />
                 University of Florida, Gainesville, FL
             </p>
@@ -78,7 +78,7 @@ layout: default
                 <li>Accepted as of June 2015 - Will be attending part-time</li>
             </ul>
         </div>
-        <div class="eleven offset-by-one columns experience-item">
+        <div class="twelve columns experience-item">
             <p class="resume-exp-header"><strong>Bachelor of Science in Civil Engineering</strong> <strong class="u-pull-right">December 2012</strong><br />
                 University of Florida, Gainesville, FL
             </p>
