remove blog link

--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@ layout: default
                     <a href="http://discovercooks.com/">DiscoverCooks.com</a>
                 </p>
                 <p>
-                    PHP, MySQL, Laravel, JQuery
+                    <em>PHP, MySQL, Laravel, JQuery</em>
                 </p>
             </div>
             <div class="eight columns">
@@ -27,7 +27,7 @@ layout: default
                     <a href="http://zzipcode.com/">Zzipcode.com</a>
                 </p>
                 <p>
-                    PHP, MySQL, Laravel, Redis
+                    <em>PHP, MySQL, Laravel, Redis</em>
                 </p>
             </div>
             <div class="eight columns">
@@ -43,7 +43,7 @@ layout: default
                     <a href="https://github.com/candrews800/zipcode">Zzipcode.com PHP Library</a>
                 </p>
                 <p>
-                    PHP, Composer
+                    <em>PHP, Composer</em>
                 </p>
             </div>
             <div class="eight columns">
@@ -59,7 +59,7 @@ layout: default
                     <a href="http://ratearescue.com">RateARescue.com</a>
                 </p>
                 <p>
-                    PHP, MySQL, Laravel, JQuery
+                    <em>PHP, MySQL, Laravel, JQuery</em>
                 </p>
             </div>
             <div class="eight columns">
@@ -76,7 +76,7 @@ layout: default
                     <a href="http://clintonandrews.com">Clinton Andrews Portfolio</a>
                 </p>
                 <p>
-                    HTML, CSS, JQuery
+                    <em>Jekyll, JQuery, Skeleton Framework</em>
                 </p>
             </div>
             <div class="eight columns">
@@ -94,7 +94,7 @@ layout: default
                     <a href="http://sunshineplumbingofsouthflorida.com">Sunshine Plumbing of South Florida</a>
                 </p>
                 <p>
-                    PHP, MyMySQLSql, Wordpress
+                    <em>PHP, MySQL, Wordpress</em>
                 </p>
             </div>
             <div class="eight columns">
@@ -110,7 +110,7 @@ layout: default
                     <a href="http://taskchomp.com">TaskChomp.com</a>
                 </p>
                 <p>
-                    PHP, MySQL
+                    <em>PHP, MySQL</em>
                 </p>
             </div>
             <div class="eight columns">
@@ -127,7 +127,7 @@ layout: default
                     <a href="http://github.com/candrews800/UFBowling">UFBowling.com</a>
                 </p>
                 <p>
-                    PHP, MySQL
+                    <em>PHP, MySQL</em>
                 </p>
             </div>
             <div class="eight columns">
@@ -144,7 +144,7 @@ layout: default
                     <a href="https://github.com/candrews800/Pac-Man">Pac-Man</a>
                 </p>
                 <p>
-                    C++, SDL
+                    <em>C++, SDL</em>
                 </p>
             </div>
             <div class="eight columns">
@@ -161,7 +161,7 @@ layout: default
                     <a href="https://github.com/candrews800/Tetris">Brick Layer</a>
                 </p>
                 <p>
-                    C++, SDL
+                    <em>C++, SDL</em>
                 </p>
             </div>
             <div class="eight columns">
@@ -178,7 +178,7 @@ layout: default
                     <a href="https://github.com/candrews800/SpaceInvaders">Tribal Invaders</a>
                 </p>
                 <p>
-                    C++, SDL
+                    <em>C++, SDL</em>
                 </p>
             </div>
             <div class="eight columns">
@@ -195,7 +195,7 @@ layout: default
                     <a href="https://github.com/candrews800/Pong">Pong</a>
                 </p>
                 <p>
-                    C++, SDL
+                    <em>C++, SDL</em>
                 </p>
             </div>
             <div class="eight columns">
