--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <section id="content" class="container">
     <div id="main-banner">
-        <img src="img/avatar.jpg" />
+        <img src="img/thumbnails/avatar.jpg" />
         <h1>Hello.</h1>
         <div class="row">
             <div class="offset-by-one ten columns">
