Add Youtube videos for previous games.

--- a/projects.html
+++ b/projects.html
@@ -174,8 +174,16 @@ layout: default
             </div>
         </article>
 
-        <article class="project row">
-            <div class="four columns">
+        <article class="project">
+            <div class="row">
+                <div class="row">
+                <div class="eight offset-by-four">
+                    <iframe width="420" height="315" src="https://www.youtube.com/embed/3QvNMdeqrZA" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+            </div>
+            <div class="row">
+                <div class="four columns">
                 <p>
                     <a href="https://github.com/candrews800/Tetris">Brick Layer</a>
                 </p>
@@ -184,16 +192,22 @@ layout: default
                 </p>
             </div>
             <div class="eight columns">
-                <iframe width="420" height="315" src="https://www.youtube.com/embed/3QvNMdeqrZA" frameborder="0" allowfullscreen></iframe>
                 <p>
                     Remake of Tetris
                 </p>
                 <p><a href="https://github.com/candrews800/Tetris" class="button">View Code</a></p>
             </div>
+            </div>
         </article>
 
-        <article class="project row">
-            <div class="four columns">
+        <article class="project">
+            <div class="row">
+                <div class="eight offset-by-four">
+                    <iframe width="420" height="315" src="https://www.youtube.com/embed/yb57iyHoZyY" frameborder="0" allowfullscreen></iframe></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="four columns">
                 <p>
                     <a href="https://github.com/candrews800/SpaceInvaders">Tribal Invaders</a>
                 </p>
@@ -207,10 +221,17 @@ layout: default
                 </p>
                 <p><a href="https://github.com/candrews800/SpaceInvaders" class="button">View Code</a></p>
             </div>
+            </div>
         </article>
 
-        <article class="project row">
-            <div class="four columns">
+        <article class="project">
+            <div class="row">
+                <div class="eight offset-by-four">
+                    <iframe width="420" height="315" src="https://www.youtube.com/embed/_sA0uAq3Yg0" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="row">
+                <div class="four columns">
                 <p>
                     <a href="https://github.com/candrews800/Pong">Pong</a>
                 </p>
@@ -220,9 +241,11 @@ layout: default
             </div>
             <div class="eight columns">
                 <p>
+                    <iframe width="420" height="315" src="https://www.youtube.com/embed/_sA0uAq3Yg0" frameborder="0" allowfullscreen></iframe>
                     Remake of Pong -- First foray into game development.
                 </p>
                 <p><a href="https://github.com/candrews800/Pong" class="button">View Code</a></p>
+            </div>
             </div>
         </article>
     </div>
