--- a/projects.html
+++ b/projects.html
@@ -177,7 +177,7 @@ layout: default
         <article class="project">
             <div class="row">
                 <div class="row">
-                <div class="eight offset-by-four">
+                <div class="eight offset-by-four columns">
                     <iframe width="420" height="315" src="https://www.youtube.com/embed/3QvNMdeqrZA" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
@@ -202,7 +202,7 @@ layout: default
 
         <article class="project">
             <div class="row">
-                <div class="eight offset-by-four">
+                <div class="eight offset-by-four columns">
                     <iframe width="420" height="315" src="https://www.youtube.com/embed/yb57iyHoZyY" frameborder="0" allowfullscreen></iframe></div>
                 </div>
             </div>
@@ -226,7 +226,7 @@ layout: default
 
         <article class="project">
             <div class="row">
-                <div class="eight offset-by-four">
+                <div class="eight offset-by-four columns">
                     <iframe width="420" height="315" src="https://www.youtube.com/embed/_sA0uAq3Yg0" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
@@ -241,7 +241,6 @@ layout: default
             </div>
             <div class="eight columns">
                 <p>
-                    <iframe width="420" height="315" src="https://www.youtube.com/embed/_sA0uAq3Yg0" frameborder="0" allowfullscreen></iframe>
                     Remake of Pong -- First foray into game development.
                 </p>
                 <p><a href="https://github.com/candrews800/Pong" class="button">View Code</a></p>
