--- a/projects.html
+++ b/projects.html
@@ -201,7 +201,7 @@ layout: default
         <article class="project">
             <div class="row">
                 <div class="eight offset-by-four columns">
-                    <iframe width="420" height="315" src="https://www.youtube.com/embed/yb57iyHoZyY" frameborder="0" allowfullscreen></iframe></div>
+                    <iframe width="420" height="315" src="https://www.youtube.com/embed/yb57iyHoZyY" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="row">
