--- a/games/minesweeper/index.html
+++ b/games/minesweeper/index.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <style>
-        body{
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
+---
+layout: default
+---
 
-<canvas id="canvas" style="border:1px solid #c3c3c3;">
-    Your browser does not support the HTML5 canvas tag.
-</canvas>
+<section id="content" class="container">
+    <div id="contact" class="row">
+        <div class="twelve columns">
+            <canvas id="canvas" style="border:1px solid #c3c3c3;">
+                Your browser does not support the HTML5 canvas tag.
+            </canvas>
+        </div>
+    </div>
+</section>
 
 <script src="js/Canvas.js"></script>
 <script src="js/Game.js"></script>
@@ -38,6 +37,3 @@
         })(game), 17
     );
 </script>
-
-</body>
-</html>
