--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@ layout: default
 
 <section id="content" class="container">
     <div id="project-list">
-        <h5>Active Projects</h5>
+        <h5>Projects</h5>
         <article class="project">
             <div class="row">
                 <div class="eight offset-by-four columns">
@@ -105,8 +105,6 @@ layout: default
                 <p><a href="http://github.com/candrews800/portfolio" class="button">View Code</a></p>
             </div>
         </article>
-
-        <h5>Past Projects</h5>
         <article class="project row">
             <div class="four columns">
                 <p>
